// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationContainer should render correctly 1`] = `
<Styled(ConfirmationView)
  encryptedEmailAddress=""
  isCanadaSite={false}
  isGuest={true}
  isOrderPending={false}
  isUsSite={true}
  isVenmoPaymentInProgress={false}
  orderNumbersByFullfillmentCenter={
    Object {
      "fullfillmentCenterMap": Array [
        Object {
          "orderType": "BOSS",
        },
      ],
    }
  }
  orderShippingDetails={null}
  updateOrderDetailsData={null}
  venmoUserName=""
/>
`;

exports[`ConfirmationContainer should render correctly with Bopis item 1`] = `
<Styled(ConfirmationView)
  encryptedEmailAddress=""
  isCanadaSite={false}
  isGuest={true}
  isOrderPending={false}
  isUsSite={true}
  isVenmoPaymentInProgress={false}
  orderNumbersByFullfillmentCenter={
    Object {
      "fullfillmentCenterMap": Array [
        Object {
          "orderType": "BOPIS",
        },
      ],
    }
  }
  orderShippingDetails={null}
  updateOrderDetailsData={null}
  venmoUserName=""
/>
`;
